--- a/static/psyP_CSS.css
+++ b/static/psyP_CSS.css
@@ -17,7 +17,7 @@ example from Bootstrap:
     .row-cols-md-5>*{flex:0 0 auto;width:20%}
     .row-cols-md-6>*{flex:0 0 auto;width:16.66666667%}
 
-    .col-md-auto{flex:0 0 auto;width:auto}
+    .col-md-auto{flex:0 0 auto;width:auto}grid-row
     .col-md-1{flex:0 0 auto;width:8.33333333%}
     .col-md-2{flex:0 0 auto;width:16.66666667%}
     .col-md-3{flex:0 0 auto;width:25%}
@@ -46,7 +46,11 @@ XXL         ≥1400px Normal.
     --topJoy: 35%;
     --leftJoy: 35%;
     --radionColorM: rgb(0, 255, 64);
-    --screenEffect: url("gallery/FX/screenDmg1.png")
+    /* --screenEffect: url("gallery/FX/screenDmg1.png"); */
+    --screenEffect: url("");
+    --uiBGSecondaryHalf: url("gallery/UI/uiSecondaryHalf.png");
+    --uiBGOpacity: 0.8;
+    
 }
 
 body{
@@ -265,8 +269,7 @@ body{
     top: 14rem;
     background-color: rgba(14, 14, 14, 0.89);  
     flex-wrap: wrap;
-    opacity: 0; /*Initial opacity at 0*/
-    
+    display: none;
 }
 
 #coinFlipTxt{
@@ -468,14 +471,7 @@ body{
         padding: 0;
     }
 
-    #heartMonitorBattle{
-        background-image: url("gallery/FX/HBMgreen.gif");
-        background-position: center;
-        background: contain;
-        background-size: 15rem;
-        width: 80%;
-        height: 10rem;
-    }
+    
 
     #heartMonitor{
         background-image: url("gallery/FX/HBMgreen.gif");
@@ -903,6 +899,7 @@ legend{
     flex-wrap: wrap;
     justify-content: center;
     align-items: center; 
+    position: relative;
 }
 
 #screen:after{
@@ -937,6 +934,46 @@ legend{
     justify-content: inherit;
 }
 
+#battleStatsPC{
+    /* display: none */
+    width: 50rem;
+    min-height: 8rem;
+    display: grid;
+    grid-template-columns: repeat(50, 2%);
+    grid-template-rows: repeat(20, 5%);
+    position: absolute;
+    background-color: rgba(220, 220, 220, 0.3);
+    backdrop-filter: blur(10px);
+    border-radius: 25px;
+    bottom: 5%;
+    left: 5%;
+}
+
+.statGauge{
+    position: absolute;
+    background-color:rgba(70, 100, 100, 0.2);
+    border-style: solid;
+    width: 15vw;
+    height: 1.5vh;
+    border: 3px solid rgb(200, 200, 200);
+    display: flex;
+    flex-direction: row;
+}
+
+#healthBarPC{
+    grid-row: 2;
+    grid-column: 2;
+}
+
+#psiPC{
+    grid-row: 6;
+    grid-column: 2;
+}
+
+#sanityPC{
+    grid-row: 10;
+    grid-column: 2;
+}
 
 .monsterHealthBar{
     position: absolute;
@@ -949,20 +986,6 @@ legend{
     border-top-width: 0.5vh;
     border-bottom-width: 0.5vh;
     top: 25vh;
-    display: inherit;
-    flex-direction: row;
-}
-
-#healthBarPC{
-    position: absolute;
-    background-color:rgba(70, 100, 100, 0.4);
-    border-style: solid;
-    border-color: rgb(200, 200, 200);
-    width: 15vw;
-    height: 2vh;
-    border-width: 1px;
-    border-top-width: 0.5vh;
-    border-bottom-width: 0.5vh;
     display: flex;
     flex-direction: row;
 }
@@ -991,6 +1014,31 @@ legend{
     transition: all 0.4s ease-in-out;
 }
 
+.psiBitPC{
+    height:85%;
+    width:2%;
+    border-style: solid;
+    border-color: black;
+    border-width: 1px;
+    background: linear-gradient(0deg, rgba(227,145,145,0.09567577030812324) 12%, rgb(0, 162, 255) 64%, rgba(13, 115, 199, 0.692) 98%);
+    padding: 0;
+    margin: 0;
+    transition: all 0.4s ease-in-out;
+}
+
+.sanityBitPC{
+    height:85%;
+    width:2%;
+    border-style: solid;
+    border-color: black;
+    border-width: 1px;
+    background: linear-gradient(0deg, rgba(227,145,145,0.09567577030812324) 12%, rgb(86, 6, 177) 64%, rgba(163, 92, 230, 0.692) 98%);
+    padding: 0;
+    margin: 0;
+    transition: all 0.4s ease-in-out;
+}
+
+
 #monsterBattler{
     max-width: 25rem;
     max-height: 25rem;
@@ -1003,6 +1051,9 @@ legend{
     flex-shrink: 0;
 }
 
+.battlerParent{
+    display: none;
+}
 
 #monsterStats{
     background-image: url(gallery/UI/combatUI.png);
@@ -1024,7 +1075,18 @@ legend{
     color: rgba(15, 206, 107, 0.9); 
 }
 
-
+#heartMonitorBattle{
+    background-image: url("gallery/FX/HBMgreen.gif");
+    background-position: left;
+    background: contain;
+    background-repeat: no-repeat;
+    background-size: 15rem;
+    position: absolute;
+    width: 10rem;
+    height: 5rem;
+    grid-row: 7;
+    grid-column: 2;
+}
 
 
 
@@ -1202,21 +1264,23 @@ legend{
 }
 
 #radioHUD{
-    position: fixed;
+    position: absolute;
+    flex-wrap: wrap;
     left: 4rem;
     bottom: 0;
     display: flex;
-    flex-wrap: wrap;
     border-radius: 5%;
     border-width: 1px;
     border-style: solid;
     border-color: rgb(173, 173, 173);
     background-repeat: no-repeat;
     background-size: 100% 100%;
-    background-image: url(gallery/UI/uiSecondaryHalf.png);
+    background-image: var(--uiBGSecondaryHalf);
+    opacity: var(--uiBGOpacity);
     justify-content: center;
     margin: 5px;
-    background-color: rgba(70, 100, 100, 0.9);
+    width: 20rem;
+    height: 10rem;
     max-width: 305px;
     max-height: 90px;
     transition: all 0.4s ease-in;
@@ -1237,10 +1301,19 @@ legend{
 
 /* title of song*/
 #radioHUD span {
-    order: -1;
-    margin: 12px;
+    /* order: -1; */
+    margin: 5px;
     color: rgb(225, 220, 220);
+    height: 40%;
+    width: 100%;
+    text-align: center;
+}
 
+#radioUI{
+    width: 100%; 
+    height: 50%;
+    display: flex;
+    justify-content: center;
 }
 
 /* Buttons for radio */
@@ -1251,7 +1324,8 @@ legend{
     border: none; 
     background-repeat: no-repeat;
     background-size: 40px ;
-    width: 50px;
+    width: 2rem;
+    height: 2rem;
     margin-bottom: 15px;
     transition: 0.1s linear;
 }
@@ -1264,7 +1338,7 @@ legend{
     background-image: url(gallery/UI/uiRadioBack.png);
 }
 #buttonPausePlay{
-    width: 70px;
+    width: 2rem;
     background-image: url(gallery/UI/uiRadioPlay.png);
     background-size: contain;
     background-position: center;
